--- a/views/basics.ejs
+++ b/views/basics.ejs
@@ -1,2 +1,21 @@
 <%- include('partials/header') %>
 
+<div>
+<main>
+    <section>
+      <h1>Operações básicas com complexos</h1>
+      <h3>Adição</h3>
+      <p>Basta somar parte real com parte real e parte imaginária com parte imaginária</p>
+      <p> <strong> (a + bi) </strong> + <strong> (c + di)</strong> = <strong>(a + c) + i(b + d) </strong></p>
+      <h3>Subtração</h3>
+      <p>Basta somar a parte real do primeiro com o oposto da parte real do segundo; análogo para a parte imaginária.</p>
+      <p> <strong> (a + bi) </strong> - <strong> (c + di)</strong> = <strong>(a - c) + i(b - d) </strong></p>
+      <h3>Multiplicação</h3>
+      <p>Basta aplicar a propriedade distributiva lembrando que i² = -1</p>
+      <p> <strong> (a + bi) </strong> * <strong> (c + di)</strong> = <strong>(ac - bd) + i (ad + bc)</strong></p>
+      <h3>Divisão</h3>
+      <p>Basta multiplicarmos a fração pelo conjugado do denominador</p>
+      <p> <strong>(a + bi)/(c + di)</strong>= <strong>[(a + bi) * (c - di)]/(c² + d²)</strong></p>
+    </section>
+</main>
+</div>
