--- a/views/formas.ejs
+++ b/views/formas.ejs
@@ -1,1 +1,14 @@
  <%- include('partials/header') %>
+
+<div>
+  <main>
+    <section>
+      <h1>Formas dos Números Complexos</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla rhoncus vitae metus sagittis dignissim. Fusce rutrum, nunc vitae gravida cursus, ipsum metus bibendum tortor, vitae faucibus nisl nunc a nisi. Cras et ante a dui suscipit varius. Curabitur ornare rutrum enim id congue. Vivamus consectetur nisi urna, sed facilisis orci viverra eu. Praesent posuere scelerisque est vitae lacinia. Quisque maximus pretium tincidunt. Aenean volutpat id quam vitae vulputate. Cras sed massa erat. Phasellus eu lectus vitae elit condimentum accumsan.
+
+      Sed eu gravida lorem. Vivamus in turpis nec est iaculis cursus sed ac nisl. Mauris eget elementum ipsum, ut finibus turpis. Ut id finibus est. Aliquam at purus congue, egestas lectus quis, bibendum neque. Maecenas pulvinar lectus ipsum, sit amet maximus libero vehicula ac. Nulla nec massa lectus. Aenean in ligula finibus, fringilla felis ac, porta dolor. Maecenas a orci vel justo bibendum posuere. Pellentesque dui massa, molestie sit amet fringilla ut, dignissim nec tortor. Etiam vel hendrerit arcu.</p>
+    </section>
+</main>
+</div>
+
+<center><img src='images/trigonometry_form.gif' alt=animation width="300"></center>
