--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>COMPLEX NUMBERS</title>
-  <link href="/public/stylesheets/style.css" rel="stylesheet" type="text/css" />
+  <link href="../public/stylesheets/style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -14,12 +14,16 @@
 
   <main>
     <section>
-      <h2>O que são Números Complexos?</h2>
+      <h1>O que são Números Complexos?</h1>
       <p>Os números complexos são uma extensão dos números reais, incluindo um elemento imaginário <i>i</i>, que é definido como a raiz quadrada de -1.</p>
-      <p>Na forma padrão, um número complexo é escrito como <strong>a + bi</strong>, onde <strong>a</strong> é a parte real e <strong>bi</strong> é a parte imaginária.</p>
+      <p>Na forma padrão, um número complexo é escrito como <strong>x + yi</strong>, onde <strong>x</strong> é a parte real e <strong>y</strong> é a parte imaginária.</p>
       <p>Eles têm várias aplicações em matemática, física e engenharia, especialmente em problemas envolvendo equações diferenciais, circuitos elétricos e ondas.</p>
+      <p>Isso é devido ao seu caráter periódico, como veremos mais à frente.</p>
     </section>
   </main>
+
+  <center><img src='images/complex_number.gif' alt=animation width="300"></center>
+  
 </div>
 </body>
 
