--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,18 +5,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Header</title>
-  <link href="public/stylesheets/style.css" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
      <nav>
-       <ul>
-         <li id="Intro"><a href="/index">Introdução</a></li>
-         <li id="Basics"><a href="/basics">Operações Básicas</a></li>
-         <li id='Questions'><a href="/questions">Exercícios</a></li>
-         <li id='Login'><a href="/login">Login</a></li>
-         <li id='Sign in'><a href="/signin">Cadastro</a></li>
-         <li id='Formas'> <a href="/forms">Formas do Número Complexo</a>
+       <ul >
+         <li><a href="/">Introdução</a></li>
+         <li><a href="/basics">Operações Básicas</a></li>
+         <li> <a href="/formas">Formas do Número Complexo</a></li>
+         <li><a href="/questions">Exercícios</a></li>
+         <li><a href="/login">Login</a></li>
+         <li><a href="/signin">Cadastro</a></li>
        </ul>
      </nav>
 </body>
